Renders differently on server than on development machine

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <a class="btn btn-lg btn-secondary" onclick="window.open('http://globalties.ucsd.edu/','_blank')">Learn more about Global TIES</a>
               </p>
               <br>
-              <p class="lead">I was also briefly involved in undergraduate research with Engineers for Exploration.</p>
+              <p class="lead">I was also an undergraduate researcher with Engineers for Exploration.</p>
                 <a class="btn btn-lg btn-secondary" onclick="window.open('http://e4e.ucsd.edu','_blank')">Learn more about E4E</a>
               </p>
           </div>
