Added button functionality

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     </div>
   </div> <!-- End Education and Experience -->
 
+  <!-- Start Projects section -->
   <div id="projects" class="parallax4">
   <!-- Jumbotron-->
     <div class="container-fluid">
@@ -127,13 +128,13 @@
         <div class="col-lg-4">
           <h2><i class="fa fa-apple" style="font-size:36px"></i> Base Convert</h2>
             <p>Unpublished iOS application to convert between different numerical bases.</p>
-            <p><a class="btn btn-primary" role="button">View details &raquo;</a></p>
+            <!--<p><a class="btn btn-primary" role="button">View details &raquo;</a></p>-->
         </div>
       </div>
       <div class="footer" style="margin-bottom:2cm;">
         <!--<h2><i class="fa fa-apple" style="font-size:36px"></i> Base Convert</h2>-->
         <p>If you'd like to see how I created my website, I've uploaded all the source code for it.</p>
-        <p><a class="btn btn-primary" role="button">View details &raquo;</a></p>
+        <p><a class="btn btn-primary" role="button" onclick="window.open('https://github.com/danflorencio/danflorencio.github.io','_blank')">View details &raquo;</a></p>
       </div>
     </div>
   </div> <!-- End Projects section -->
