Added button functionality

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/bootstrap-social-gh-pages/bootstrap-social.css">
+  <!--<link rel="stylesheet" href="./bootstrap-social-gh-pages/bootstrap-social.css">-->
   <!-- material icons, for email icon -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -23,7 +23,7 @@
         </div>
         <ul class="nav navbar-nav">
           <li><a href="#home">Home</a></li>
-          <li><a href="#about" onClick="document.getElementById('about').scrollIntoView();">About</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#education">Education</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#connect">Connect</a></li>
@@ -31,6 +31,8 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="mailto:danflorencio@outlook.com" target="_top"><span class="glyphicon glyphicon-envelope"></span></a></li>
           <!-- btn-linkedin -->
+          <!--<li><i class="fa fa-linkedin-square" aria-hidden="true"></i> </li>
+          <li><i class="fa fa-github-square" aria-hidden="true"></i></li>-->
           <!-- btn-github -->
           <li><a class="btn btn-social-icon btn-linkedin" onclick="window.open('https://www.linkedin.com/in/daniel-florencio/','_blank')"><span class="fa fa-linkedin"></span></a></li>
           <li><a class="btn btn-social-icon btn-github" onclick="window.open('https://github.com/danflorencio','_blank')"><span class="fa fa-github"></span></a></li>
@@ -111,7 +113,7 @@
       <div class="jumbotron" style="background-color: #483D8B;">
         <h1>Software Projects</h1>
           <p class="lead">A handful of software projects authored by myself.</p>
-          <p><a class="btn btn-lg btn-success" href="#" role="button">Get started today</a></p>
+          <p><a class="btn btn-lg btn-success" onclick="window.open('https://github.com/danflorencio','_blank')" role="button">View on GitHub</a></p>
       </div>
       <div class="row">
         <div class="col-lg-4">
