Changed up the backgrounds a little

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="nav navbar-nav">
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#education">Education</a></li>
+          <li><a href="#education">Education & Experience</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#connect">Connect</a></li>
         </ul>
@@ -74,11 +74,17 @@
   <div id="about" class="parallax2">
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
-        <div class="cover-container">
+        <div class="cover-container-fluid">
           <div class="inner cover">
             <h1 class="cover-heading">About:</h1>
-              <p class="lead">My name is Daniel Florencio. I am a computer science student at UC San Diego, graduating in December 2017 and seeking employment. This is my personal website.</p>
-                <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+              <p class="lead">My name is Daniel Florencio.
+              </p>
+              <p class="lead">
+                I am a computer science student at UC San Diego,<br>
+                graduating in December 2017 and seeking employment.
+              </p>
+              <p class="lead">This is my personal website.</p>
+                <!--<a href="#" class="btn btn-lg btn-secondary">Learn more</a>-->
               </p>
           </div>
         </div>
