--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
             <h1 class="cover-heading">About:</h1>
               <p class="lead">My name is Daniel Florencio.
               </p>
+              <!-- no line break here? -->
               <p class="lead">
-                I am a computer science student at UC San Diego,<br>
+                I am a computer science student at UC San Diego,
                 graduating in December 2017 and seeking employment.
               </p>
               <p class="lead">This is my personal website.</p>
@@ -156,9 +157,9 @@
           <br>
         </div>
         <div class="col-sm-4">
-          <h1>Résumé</h1>
+          <h1>Resume</h1>
           <a class="btn btn-info btn-lg" onclick="window.open('./dan-florencio-resume.pdf','_blank')">
-            <span class="glyphicon glyphicon-file"></span> Résumé
+            <span class="glyphicon glyphicon-file"></span> CV
           </a>
           <br>
           <br>
