--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
         <div class="col-sm-4">
           <h1>Resume</h1>
-          <a class="btn btn-info btn-lg" onclick="window.open('./dan-florencio-resume.pdf','_blank')">
+          <a id="CV" class="btn btn-info btn-lg" onclick="window.open('./dan-florencio-resume.pdf','_blank')">
             <span class="glyphicon glyphicon-file"></span> CV
           </a>
           <br>
