--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
             <h1 class="cover-heading">About:</h1>
               <p class="lead">My name is Daniel Florencio.
               </p>
-              <!-- no line break here? -->
+              <!-- no line break here? style="color: #AACCFF;" <- play around with this?-->
               <p class="lead">
                 I am a computer science student at UC San Diego,
                 graduating in December 2017 and seeking employment.
               </p>
+              <!--<img src="./images/cseLogo.gif" height="125">-->
               <p class="lead">This is my personal website.</p>
                 <!--<a href="#" class="btn btn-lg btn-secondary">Learn more</a>-->
               </p>
@@ -124,26 +125,26 @@
       </div>
       <div class="row">
         <div class="col-lg-4">
-          <h2><i class="fa fa-chrome" style="font-size:36px"></i> Whiteboard Prep</h2>
+          <h2><i class="fa fa-chrome" style="font-size:36px;"></i> Whiteboard Prep</h2>
             <p>Chrome extension that lists various programming challenges to help prepare programmers for software engineering interviews.</p>
             <p>Implemented using a webscraper to grab JSON data from Codewars.com</p>
-            <p><a class="btn btn-primary" role="button" onclick="window.open('https://chrome.google.com/webstore/detail/whiteboard-prep/khfhbclbanjdofelfjnelffecfmgomli','_blank')">View details &raquo;</a></p>
+            <p><a class="btn btn-primary btn-success" role="button" onclick="window.open('https://chrome.google.com/webstore/detail/whiteboard-prep/khfhbclbanjdofelfjnelffecfmgomli','_blank')">View on Chrome Web Store &raquo;</a></p>
         </div>
         <div class="col-lg-4">
-          <h2><i class="fa fa-chrome" style="font-size:36px"></i> Quora Login Blocker</h2>
+          <h2><i class="fa fa-chrome" style="font-size:36px;"></i> Quora Login Blocker</h2>
             <p>Chrome extension that blocks login prompts from Quora.</p>
-            <p><a class="btn btn-primary" role="button" onclick="window.open('https://chrome.google.com/webstore/detail/quora-login-blocker/icnkgmbbkeobmpliahienehjcdpbniml','_blank')">View details &raquo;</a></p>
+            <p><a class="btn btn-primary btn-success" role="button" onclick="window.open('https://chrome.google.com/webstore/detail/quora-login-blocker/icnkgmbbkeobmpliahienehjcdpbniml','_blank')">View on Chrome Web Store &raquo;</a></p>
         </div>
         <div class="col-lg-4">
-          <h2><i class="fa fa-apple" style="font-size:36px"></i> Base Convert</h2>
+          <h2><i class="fa fa-apple" style="font-size:36px;"></i> Base Convert</h2>
             <p>Unpublished iOS application to convert between different numerical bases.</p>
             <!--<p><a class="btn btn-primary" role="button">View details &raquo;</a></p>-->
         </div>
       </div>
-      <div class="footer" style="margin-bottom:2cm;">
+      <div class="footer">
         <!--<h2><i class="fa fa-apple" style="font-size:36px"></i> Base Convert</h2>-->
         <p>If you'd like to see how I created my website, I've uploaded all the source code for it.</p>
-        <p><a class="btn btn-primary" role="button" onclick="window.open('https://github.com/danflorencio/danflorencio.github.io','_blank')">View details &raquo;</a></p>
+        <p><a class="btn btn-primary btn-success" role="button" onclick="window.open('https://github.com/danflorencio/danflorencio.github.io','_blank')">View details &raquo;</a></p>
       </div>
     </div>
   </div> <!-- End Projects section -->
@@ -151,9 +152,14 @@
   <div id="connect" class="parallax5">
     <div class="container-fluid">
       <div class="row vertical-center">
-        <div class="col-sm-4">
+        <!--<div class="col-sm-4">
           <h1>Contact</h1>
           <h3><i class="fa fa-envelope" aria-hidden="true" style="font-size:200%;"></i> danflorencio@outlook.com</h3>
+          <br>
+        </div>-->
+        <div class="col-sm-4">
+          <h1>Contact</h1>
+          <h3><span class="glyphicon glyphicon-envelope" style="font-size:150%;"></span> danflorencio@outlook.com</h3>
           <br>
         </div>
         <div class="col-sm-4">
