updated education and experience

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <a class="btn btn-lg btn-secondary" onclick="window.open('http://globalties.ucsd.edu/','_blank')">Learn more about Global TIES</a>
               </p>
               <br>
-              <p class="lead">I was also an undergraduate researcher with Engineers for Exploration.</p>
+              <p class="lead">I was also an undergraduate researcher with Engineers for Exploration working on implementing SLAM algorithms on embedded systems to explore Mayan archaeology.</p>
                 <a class="btn btn-lg btn-secondary" onclick="window.open('http://e4e.ucsd.edu','_blank')">Learn more about E4E</a>
               </p>
           </div>
