changed background color of projects

--- a/index.html
+++ b/index.html
@@ -170,22 +170,22 @@
   <div id="projects" class="projects">
   <!-- Jumbotron-->
     <div class="container-fluid">
-      <div class="jumbotron" style="background-color: #0091ea;">
+      <div class="jumbotron" style="background-color: green;">
         <h1>Software Projects</h1>
           <p class="lead">A handful of software projects authored by myself.</p>
-          <p><a class="btn btn-lg btn-success" onclick="window.open('https://github.com/danflorencio','_blank')" role="button">View on GitHub</a></p>
+          <p><a class="btn btn-lg btn-primary" onclick="window.open('https://github.com/danflorencio','_blank')" role="button">View on GitHub</a></p>
       </div>
       <div class="row">
         <div class="col-lg-4">
           <h2><i class="fa fa-chrome" style="font-size:36px;"></i> Whiteboard Prep</h2>
             <p>Chrome extension that lists various programming challenges to help prepare programmers for software engineering interviews.</p>
             <p>Implemented a Python webscraper to grab JSON data from Codewars.com</p>
-            <p><a class="btn btn-primary btn-success" role="button" onclick="window.open('https://chrome.google.com/webstore/detail/whiteboard-prep/khfhbclbanjdofelfjnelffecfmgomli','_blank')">View on Chrome Web Store &raquo;</a></p>
+            <p><a class="btn btn-primary btn-primary" role="button" onclick="window.open('https://chrome.google.com/webstore/detail/whiteboard-prep/khfhbclbanjdofelfjnelffecfmgomli','_blank')">View on Chrome Web Store &raquo;</a></p>
         </div>
         <div class="col-lg-4">
           <h2><i class="fa fa-chrome" style="font-size:36px;"></i> Quora Login Blocker</h2>
             <p>Chrome extension that blocks login prompts from Quora.</p>
-            <p><a class="btn btn-primary btn-success" role="button" onclick="window.open('https://chrome.google.com/webstore/detail/quora-login-blocker/icnkgmbbkeobmpliahienehjcdpbniml','_blank')">View on Chrome Web Store &raquo;</a></p>
+            <p><a class="btn btn-primary btn-primary" role="button" onclick="window.open('https://chrome.google.com/webstore/detail/quora-login-blocker/icnkgmbbkeobmpliahienehjcdpbniml','_blank')">View on Chrome Web Store &raquo;</a></p>
         </div>
         <div class="col-lg-4">
           <h2><i class="fa fa-apple" style="font-size:36px;"></i> Base Convert</h2>
@@ -197,7 +197,7 @@
       <div class="footer">
         <!--<h2><i class="fa fa-apple" style="font-size:36px"></i> Base Convert</h2>-->
         <p>If you'd like to see how I created my website, I've uploaded all the source code for it.</p>
-        <p><a class="btn btn-primary btn-success" role="button" onclick="window.open('https://github.com/danflorencio/danflorencio.github.io','_blank')">View details &raquo;</a></p>
+        <p><a class="btn btn-primary btn-primary" role="button" onclick="window.open('https://github.com/danflorencio/danflorencio.github.io','_blank')">View details &raquo;</a></p>
       </div>
     </div>
   </div> <!-- End Projects section -->
