full-stack engineer

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
   <!-- Start of Home section -->
   <div id="home" class="home">
+
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -32,44 +33,27 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="mailto:danflorencio@outlook.com" target="_top"><span class="glyphicon glyphicon-envelope"></span></a></li>
-          <!-- btn-linkedin -->
-          <!--<li><i class="fa fa-linkedin-square" aria-hidden="true"></i> </li>
-          <li><i class="fa fa-github-square" aria-hidden="true"></i></li>-->
-          <!-- btn-github -->
           <li><a class="btn btn-social-icon btn-linkedin" onclick="window.open('https://www.linkedin.com/in/daniel-florencio/','_blank')"><span class="fa fa-linkedin"></span></a></li>
           <li><a class="btn btn-social-icon btn-github" onclick="window.open('https://github.com/danflorencio','_blank')"><span class="fa fa-github"></span></a></li>
-          <!--<li><a class="btn btn-social-icon btn-twitter"><span class="fa fa-twitter"></span></a></li>-->
         </ul>
       </div>
     </nav>
-    <div class="site-wrapper">
+
+    <!--<div class="site-wrapper">
       <div class="site-wrapper-inner">
         <div class="cover-container">
-          <!--<div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">Cover</h3>
-              <nav class="nav nav-masthead">
-                <a class="nav-link active" href="#">Home</a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link" href="#">Contact</a>
-              </nav>
-            </div>
-          </div>-->
           <div class="inner cover">
-            <h1 class="cover-heading">Engineer.</h1>
-            <!--<p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-            </p>-->
+            <h1 class="cover-heading" style="text-align: center;">
+              Hi. I'm Dan, an aspiring full-stack engineer.
+            </h1>
           </div>
-          <!--<div class="mastfoot">
-            <div class="inner">
-              <p>Cover template for <a href="https://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            </div>
-          </div>-->
         </div>
       </div>
+    </div>-->
+    <div>
+      <h1 style="float: center; padding-top: 25%;">Hi. I'm Dan, an aspiring full-stack engineer.</h1>
     </div>
+
   </div> <!-- End Home section -->
 
   <!-- Start of About section -->
