--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         </div>-->
         <div class="col-sm-4">
           <h1>Contact</h1>
-          <h3><span class="glyphicon glyphicon-envelope" style="font-size:150%;"></span> danflorencio@outlook.com</h3>
+          <a href="mailto:danflorencio@outlook.com" <h3 style="font-size: 185%;"><span class="glyphicon glyphicon-envelope" style="font-size:150%;"></span> danflorencio@outlook.com</h3></a>
           <br>
         </div>
         <div class="col-sm-4">
