--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <ul class="nav navbar-nav">
           <li><a onclick="smoothScroll(document.getElementById('home'))">Home</a></li>
-          <li><a onclick="smoothScroll(document.getElementById('about'))">About</a></li>
+          <li><a onclick="smoothScroll(document.getElementById('introduction'))">Introduction</a></li>
           <li><a onclick="smoothScroll(document.getElementById('education'))">Education & Experience</a></li>
           <li><a onclick="smoothScroll(document.getElementById('skills'))">Skills & Coursework</a></li>
           <li><a onclick="smoothScroll(document.getElementById('projects'))">Projects</a></li>
@@ -56,13 +56,13 @@
 
   </div> <!-- End Home section -->
 
-  <!-- Start of About section -->
-  <div id="about" class="about">
+  <!-- Start of Intro section -->
+  <div id="introduction" class="introduction">
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
         <div class="cover-container-fluid">
           <div class="inner cover">
-            <h1 class="cover-heading">About:</h1>
+            <h1 class="cover-heading">Introduction:</h1>
               <p class="lead">My name is Daniel Florencio.
               </p>
               <!-- no line break here? style="color: #AACCFF;" <- play around with this?-->
@@ -78,7 +78,7 @@
         </div>
       </div>
     </div>
-  </div> <!-- End About section -->
+  </div> <!-- End Introduction section -->
 
   <!-- Start Education and Experience section -->
   <div id="education" class="education">
