--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <br>CSS
             <br>Bootstrap
             <br>jQuery
-            <br>React.js
+            <br>React
           </h3>
         </div>
         <div class="col-sm-4">
