--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <!-- Start of Home section -->
-  <div id="home" class="home">
+  <div id='home' class='home'>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
@@ -38,18 +38,6 @@
         </ul>
       </div>
     </nav>
-
-    <!--<div class="site-wrapper">
-      <div class="site-wrapper-inner">
-        <div class="cover-container">
-          <div class="inner cover">
-            <h1 class="cover-heading" style="text-align: center;">
-              Hi. I'm Dan, an aspiring full-stack engineer.
-            </h1>
-          </div>
-        </div>
-      </div>
-    </div>-->
     <div>
       <h1 style="float: center; padding-top: 25%;">Hi. I'm Dan, an aspiring full-stack engineer.</h1>
     </div>
@@ -82,23 +70,41 @@
 
   <!-- Start Education and Experience section -->
   <div id="education" class="education">
-    <div class="site-wrapper">
-      <div class="site-wrapper-inner">
-        <div class="cover-container">
-          <div class="inner cover">
-            <h1 class="cover-heading">Education & Experience:</h1>
-              <p class="lead">During my short time at UCSD I was involved in the Global TIES program, working on humanitarian software projects and teaching computer science to kids.</p>
-                <a class="btn btn-lg btn-secondary" onclick="window.open('http://globalties.ucsd.edu/','_blank')">Learn more about Global TIES</a>
-              </p>
-              <br>
-              <p class="lead">I was also an undergraduate researcher with Engineers for Exploration working on implementing SLAM algorithms on embedded systems to explore Mayan archaeology.</p>
-                <a class="btn btn-lg btn-secondary" onclick="window.open('http://e4e.ucsd.edu','_blank')">Learn more about E4E</a>
-              </p>
-          </div>
-        </div>
-      </div>
+    <h1>Education & Experience:</h1>
+    <div class="left">
+      <p class="lead">During my time at UCSD I was involved in the Global TIES program, working on humanitarian software projects and teaching computer science to kids.</p>
+        <a class="btn btn-lg btn-secondary" onclick="window.open('http://globalties.ucsd.edu/','_blank')">Learn more about Global TIES</a>
+      </p>
+    </div>
+    <div class="middle">
+      <p class="lead">I am currently interning with The Foundation for Learning Equality, working on webscraping projects to make content available for low resource communities in developing countries.</p>
+        <a class="btn btn-lg btn-secondary" onclick="window.open('https://learningequality.org/','_blank')">Learn more about Learning Equality</a>
+      </p>
+    </div>
+    <div class="right">
+      <p class="lead">I was also an undergraduate researcher with Engineers for Exploration working on implementing SLAM algorithms on embedded systems to explore Mayan archaeology.</p>
+        <a class="btn btn-lg btn-secondary" onclick="window.open('http://e4e.ucsd.edu','_blank')">Learn more about E4E</a>
+      </p>
     </div>
   </div> <!-- End Education and Experience -->
+
+  <!--
+  <div class="left">
+    <p class="lead">During my short time at UCSD I was involved in the Global TIES program, working on humanitarian software projects and teaching computer science to kids.</p>
+      <a class="btn btn-lg btn-secondary" onclick="window.open('http://globalties.ucsd.edu/','_blank')">Learn more about Global TIES</a>
+    </p>
+  </div>
+  <div class="middle">
+    <p class="lead">During my short time at UCSD I was involved in the Global TIES program, working on humanitarian software projects and teaching computer science to kids.</p>
+      <a class="btn btn-lg btn-secondary" onclick="window.open('http://globalties.ucsd.edu/','_blank')">Learn more about Global TIES</a>
+    </p>
+  </div>
+  <div class="right">
+    <p class="lead">During my short time at UCSD I was involved in the Global TIES program, working on humanitarian software projects and teaching computer science to kids.</p>
+      <a class="btn btn-lg btn-secondary" onclick="window.open('http://globalties.ucsd.edu/','_blank')">Learn more about Global TIES</a>
+    </p>
+  </div>
+-->
 
   <div id="skills" class="skills">
     <div class="container-fluid">
@@ -190,11 +196,6 @@
   <div id="connect" class="connect">
     <div class="container-fluid">
       <div class="row vertical-center">
-        <!--<div class="col-sm-4">
-          <h1>Contact</h1>
-          <h3><i class="fa fa-envelope" aria-hidden="true" style="font-size:200%;"></i> danflorencio@outlook.com</h3>
-          <br>
-        </div>-->
         <div class="col-sm-4">
           <h1>Contact</h1>
           <a href="mailto:danflorencio@outlook.com" <h3 style="font-size: 185%;"><span class="glyphicon glyphicon-envelope" style="font-size:150%;"></span> danflorencio@outlook.com</h3></a>
@@ -212,8 +213,6 @@
         </div>
         <div class="col-sm-4">
           <h1>Social</h1>
-          <!--<i class="fa fa-linkedin-square" onclick="window.open('https://www.linkedin.com/in/daniel-florencio/','_blank')" style="font-size:60px; margin-right:15px;"></i>
-          <i class="fa fa-github-square" style="font-size:60px;"></i>-->
           <a class="btn btn-block btn-social btn-linkedin" style="font-size:200%;" onclick="window.open('https://www.linkedin.com/in/daniel-florencio/','_blank')">
             <span class="fa fa-linkedin" ></span> LinkedIn
           </a>
@@ -222,7 +221,12 @@
           </a>
         </div>
       </div>
-
+    </div>
+    <div>
+      <center>
+      <p style="bottom: 10%;">
+        Pictured above is my Siberian Husky, Luma.
+      <p>
     </div>
   </div> <!--End Connect section -->
 </body>
